# AOC-2021

./: .gitignore  Cargo.toml
day-01/: main.rs
day-02/: main.rs
day-03/: main.rs
day-04/: main.rs
day-05/: main.rs
day-06/: main.rs
day-07/: main.rs
day-08/: main.rs
day-09/: main.rs
day-10/: main.rs
day-11/: main.rs
day-12/: main.rs
day-13/: main.rs
day-14/: main.rs
day-15/: main.rs
day-16/: main.rs
day-17/: main.rs
day-18/: main.rs
day-19/: main.rs
day-20/: main.rs
day-21/: main.rs
day-22/: main.rs
day-23/: main.rs
day-24/: main.rs
day-25/: main.rs
