[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="day-01"
path="day-01/main.rs"
[[bin]]
name="day-02"
path="day-02/main.rs"
[[bin]]
name="day-03"
path="day-03/main.rs"

[dependencies]
itertools = "0.10.3"
