[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="day-01"
path="day-01/main.rs"
[[bin]]
name="day-02"
path="day-02/main.rs"
[[bin]]
name="day-03"
path="day-03/main.rs"
[[bin]]
name="day-04"
path="day-04/main.rs"
[[bin]]
name="day-05"
path="day-05/main.rs"
[[bin]]
name="day-06"
path="day-06/main.rs"
[[bin]]
name="day-07"
path="day-07/main.rs"
[[bin]]
name="day-08"
path="day-08/main.rs"
[[bin]]
name="day-09"
path="day-09/main.rs"
[[bin]]
name="day-10"
path="day-10/main.rs"

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.3"
nom = "7.1.0"
